--- a/python_dz_5.ipynb
+++ b/python_dz_5.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -213,13 +213,13 @@
        "240481.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "countries = data[(data['country'].isin(['Lithuania', 'Estonia', 'Latvia'])) & \n",
+    "countries = data[(data['country'].str.lower().isin(['lithuania', 'estonia', 'latvia'])) & \n",
     "                 (data['category'].isin([4, 12, 21])) & (data['year']>= 2005) & \n",
     "                 (data['year']<= 2010) & data['quantity']>0]\n",
     "\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
