--- a/python_dz_6.ipynb
+++ b/python_dz_6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "4      вконтакте  21014195"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 432,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,12 +126,15 @@
     "'Дальний Восток': ['владивосток', 'сахалин', 'хабаровск']\n",
     "}\n",
     "\n",
+    "for region in geo_data:\n",
+    "    geo_data[region] = set(geo_data[region])\n",
+    "\n",
     "queries.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +207,7 @@
        "1482  госуслуги москва  133061  Центр"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 433,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +216,7 @@
     "def region_def(row, dct):\n",
     "    '''Возвращает название региона, если поисковый запрос содержит название города региона.\n",
     "    Если поисковый запрос не содержит названия города, то возвращается 'undefined'.'''\n",
-    "    return next(region if any(city in row.lower() for city in cities) \n",
+    "    return next(region if any(word in cities for word in row.lower().split())\n",
     "                else 'undefined' for region, cities in dct.items())\n",
     "    \n",
     "queries['region'] = queries['keyword'].apply(region_def, dct=geo_data)\n",
@@ -223,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +299,7 @@
        "4      вконтакте  21014195  undefined"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 434,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +403,7 @@
        "4       1     1172     4.0  1260759205"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 435,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +507,7 @@
        "4        5    3.267857  средний рейтинг"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 437,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +609,7 @@
        "4       1     1172     4.0  1260759205    4.260870  высокий рейтинг"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 438,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +713,7 @@
        "4                                       Comedy    3.267857  средний рейтинг  "
       ]
      },
-     "execution_count": 279,
+     "execution_count": 439,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +832,7 @@
        "4       1     1172     4.0  1260759205    4.260870  высокий рейтинг"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 440,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 441,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 442,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +958,7 @@
        "472       2707.801609"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 442,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 443,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1004,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 444,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 445,
    "metadata": {},
    "outputs": [
     {
@@ -1106,7 +1109,7 @@
        "4                                       Comedy  1995  "
       ]
      },
-     "execution_count": 285,
+     "execution_count": 445,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 446,
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1212,7 @@
        "1958    3.571956"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 446,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,13 +1231,6 @@
    "source": [
     "#P.S.: раньше было лучше, но это не точно"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
